==> ambiot/amazon-freertos/lib/wifi/portable/realtek/ameba/aws_wifi.c <==
#include "FreeRTOS.h"
#include "Semphr.h"
#include "aws_wifi.h"
#include "aws_wifi_config.h"
#include "aws_secure_sockets.h"
#include "wifi_constants.h"
#include "wifi_structures.h"
#include "wifi_conf.h"
#include "device_lock.h"
#include "lwip_intf.h"
#include "lwip_netconf.h"

WIFIReturnCode_t WIFI_On( void )
{
#if CONFIG_INIT_NET
#if CONFIG_LWIP_LAYER
extern int lwip_init_done; 
    if(lwip_init_done == 0){
        LwIP_Init();
    }
#endif
#endif
#if CONFIG_WIFI_IND_USE_THREAD
    wifi_manager_init();
#endif
    wifi_off();
    vTaskDelay(20);
    if (wifi_on(RTW_MODE_STA) < 0){
        printf("Wifi on failed!");
        return eWiFiFailure;
    }
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_ConnectAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    int ret = eWiFiFailure;
    uint32_t ipaddr = 0;

    if((pxNetworkParams == NULL) || ((char*)pxNetworkParams->pcSSID == NULL))
    	return eWiFiFailure;
    if((prvConvertSecurityAbstractedToRTW(pxNetworkParams->xSecurity) != RTW_SECURITY_OPEN) && ((char*)pxNetworkParams->pcPassword == NULL))
        return eWiFiFailure;

    device_mutex_lock(RT_DEV_LOCK_WLAN);
    printf("\n\rJoining BSS by SSID %s...\n\r", (char*)pxNetworkParams->pcSSID);

    ret = wifi_connect((char*)pxNetworkParams->pcSSID, prvConvertSecurityAbstractedToRTW(pxNetworkParams->xSecurity), (char*)pxNetworkParams->pcPassword,
    					strlen((char*)pxNetworkParams->pcSSID), strlen((char*)pxNetworkParams->pcPassword), -1, NULL);

    device_mutex_unlock(RT_DEV_LOCK_WLAN);

    if(ret!= RTW_SUCCESS){
        if(ret == RTW_INVALID_KEY)
            printf("\n\rERROR:Invalid Key ");

        printf("\n\rERROR: Can't connect to AP");
        ret = eWiFiFailure;
    }
    else
    {

#if CONFIG_LWIP_LAYER
		LwIP_DHCP(0, DHCP_START);
#endif
		WIFI_GetIP((uint8_t *)&ipaddr);
		while(ipaddr == 0) {
			printf("\n\rWaiting for IP address");
			WIFI_GetIP((uint8_t *)&ipaddr);
			vTaskDelay(1000);
		}
		ret = eWiFiSuccess;
    }

    return ret;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer,
                            uint8_t ucNumNetworks )
{
    int ret;
    static WIFIScanParam_t scan_param = {0};
    rtw_bool_t result;
    /* Check params */
    if ((NULL == pxBuffer) || (0 == ucNumNetworks))
        return eWiFiFailure;

    /* Acquire semaphore */
    //if (xSemaphoreTake(g_wifi_semaph, portMAX_DELAY) == pdTRUE)
    //{}
    if (scan_param.xScanSemaphore== NULL)
        rtw_init_sema(&scan_param.xScanSemaphore, 0);
    scan_param.pxBuffer = pxBuffer;
    scan_param.ucNumNetworks = ucNumNetworks;
    if((ret = wifi_scan_networks(aws_scan_result_handler, &scan_param)) != RTW_SUCCESS){
        printf("wifi scan failed\n\r");
        goto exit;
    }
    rtw_down_timeout_sema(&scan_param.xScanSemaphore, 5000);
    return eWiFiSuccess;
exit:
    return eWiFiFailure;
}

WIFIReturnCode_t WIFI_SetMode( WIFIDeviceMode_t xDeviceMode )
{
	int ret = eWiFiSuccess;
    switch (xDeviceMode) 
    {
        case eWiFiModeStation:
            wifi_off();
            vTaskDelay(20);
            if (wifi_on(RTW_MODE_STA) < 0){
                printf("\n\rERROR: Wifi on failed!");
            }
            break;
        case eWiFiModeAP:
            wifi_off();
            vTaskDelay(20);
            if (wifi_on(RTW_MODE_AP) < 0){
                printf("\n\rERROR: Wifi on failed!");
            }
            break;
        case eWiFiModeP2P:
            wifi_off();
            vTaskDelay(20);
            if (wifi_on(RTW_MODE_P2P) < 0){
                printf("\n\rERROR: Wifi on failed!");
            }
            break;
        default:
        	ret = eWiFiFailure;
            break;
    }

    return ret;
}

WIFIReturnCode_t WIFI_GetMode( WIFIDeviceMode_t * pxDeviceMode )
{
    int mode, ret;
    if(pxDeviceMode == NULL)
    	return eWiFiFailure;
    ret = wext_get_mode("wlan0", &mode);
    if (ret < 0)
        return eWiFiFailure;
    switch (wifi_mode) 
    {
        case RTW_MODE_STA:
            * pxDeviceMode = eWiFiModeStation;
            break;
        case RTW_MODE_AP:
            * pxDeviceMode = eWiFiModeAP;
            break;
        case RTW_MODE_P2P:
            * pxDeviceMode = eWiFiModeP2P;
            break;
        default:
            return eWiFiPMNotSupported;
    }
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_GetIP( uint8_t * pucIPAddr )
{
	if(pucIPAddr == NULL)
		return eWiFiFailure;
#if (CONFIG_LWIP_LAYER == 1)
    uint8_t *ip = (uint8_t *)LwIP_GetIP(&xnetif[0]);
    memcpy(pucIPAddr, ip, 4);
#else
     *( ( uint32_t * ) pucIPAddr ) = FreeRTOS_GetIPAddress();
#endif
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    char buf[32];
    char mac[wificonfigMAX_BSSID_LEN];
    int i = 0;

    if(pucMac == NULL)
    	return eWiFiFailure;

    wifi_get_mac_address(buf);
    sscanf(buf, "%02x:%02x:%02x:%02x:%02x:%02x", &mac[0], &mac[1], &mac[2], &mac[3], &mac[4], &mac[5]);
    for(i=0; i<wificonfigMAX_BSSID_LEN; i++)
        pucMac[i] = mac[i]&0xFF;
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_ConfigureAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    int ret;
#if CONFIG_LWIP_LAYER
    struct netif * pnetif = &xnetif[0];
#endif

    if((pxNetworkParams == NULL) || (pxNetworkParams->pcSSID == NULL) || (pxNetworkParams->pcPassword == NULL))
    	return eWiFiFailure;

    if((strlen((char*)pxNetworkParams->pcSSID) > wificonfigMAX_SSID_LEN) || (strlen((char*)pxNetworkParams->pcPassword) > wificonfigMAX_PASSPHRASE_LEN))
    	return eWiFiFailure;

    if( (wifi_mode != RTW_MODE_AP) ){
        WIFI_SetMode(eWiFiModeAP);
    }
    if((ret = wifi_start_ap((char*)pxNetworkParams->pcSSID, prvConvertSecurityAbstractedToRTW(pxNetworkParams->xSecurity), 
                                            (char*)pxNetworkParams->pcPassword, strlen((char*)pxNetworkParams->pcSSID), strlen((char*)pxNetworkParams->pcPassword),
                                            pxNetworkParams->cChannel) )< 0) {
        printf("\n\rERROR: Operation failed!");
        return eWiFiFailure;
    }

    while(1) {
        char essid[33];
        int timeout = 20;
        if(wext_get_ssid(WLAN0_NAME, (unsigned char *) essid) > 0) {
            if(strncmp((const char *) essid, (const char *)pxNetworkParams->pcSSID, pxNetworkParams->ucSSIDLength) == 0) {
                printf("\n\r%s started\n", pxNetworkParams->pcSSID);
                break;
            }
        }

        if(timeout == 0) {
            printf("\n\rERROR: Start AP timeout!");
            return eWiFiTimeout;		
        }

        vTaskDelay(1 * configTICK_RATE_HZ);
        timeout --;
    }
#if defined( CONFIG_ENABLE_AP_POLLING_CLIENT_ALIVE )&&( CONFIG_ENABLE_AP_POLLING_CLIENT_ALIVE == 1 )
    wifi_set_ap_polling_sta(1);
#endif

#if CONFIG_LWIP_LAYER
    //LwIP_UseStaticIP(pnetif);
    dhcps_init(pnetif);
#endif
    return eWiFiSuccess;
}

BaseType_t WIFI_IsConnected(void)
{
    if (wifi_is_connected_to_ap() == RTW_SUCCESS)
        return pdTRUE;
    return pdFALSE;
}
