==> renesas-rx/rx65n-cloud-kit/lib/wifi/portable/espressif/esp32_devkitc_esp_wrover_kit/aws_wifi.c <==
#include "aws_wifi.h"
#include "aws_wifi_config.h"
#include "string.h"
#include "esp_wifi.h"
#include "esp_log.h"
#include "esp_event_loop.h"
#include "event_groups.h"
#include "FreeRTOS_IP.h"
#include "FreeRTOS_Sockets.h"
#include "semphr.h"
#include "esp_smartconfig.h"

BaseType_t WIFI_IsConnected( void )
{
    BaseType_t xRetVal = pdFALSE;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        if (wifi_conn_state == true)
        {
            xRetVal = pdTRUE;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    return xRetVal;
}

WIFIReturnCode_t WIFI_On( void )
{
    static bool wifi_inited;

    // Check if WiFi is already initialized
    if (wifi_inited == true) {
        return eWiFiSuccess;
    }

    esp_err_t ret = esp_event_loop_init(event_handler, NULL);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "%s: Failed to init event loop %d", __func__, ret);
        goto err;
    }

    wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
    ret = esp_wifi_init(&cfg);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "%s: Failed to init wifi %d", __func__, ret);
        goto err;
    }

    ret = esp_wifi_set_storage(WIFI_STORAGE_RAM);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "%s: Failed to set wifi storage %d", __func__, ret);
        goto err;
    }

    wifi_event_group = xEventGroupCreate();
    if (wifi_event_group == NULL) {
        ESP_LOGE(TAG, "%s: Failed to create eventgroup", __func__);
        goto err;
    }

    /* Create sync mutex */
    static StaticSemaphore_t xSemaphoreBuffer;
    xWiFiSem = xSemaphoreCreateMutexStatic( &( xSemaphoreBuffer ) );

    wifi_inited = true;
    return eWiFiSuccess;
err:
    return eWiFiFailure;
}

WIFIReturnCode_t WIFI_ConnectAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    wifi_config_t wifi_config = { 0 };
    esp_err_t ret;
    WIFIReturnCode_t wifi_ret = eWiFiFailure;

    if (pxNetworkParams == NULL || pxNetworkParams->pcSSID == NULL
            || (pxNetworkParams->xSecurity != eWiFiSecurityOpen && pxNetworkParams->pcPassword == NULL)) {
        return wifi_ret;
    }

    if (!CHECK_VALID_SSID_LEN(pxNetworkParams->ucSSIDLength) ||
        (pxNetworkParams->xSecurity != eWiFiSecurityOpen && !CHECK_VALID_PASSPHRASE_LEN(pxNetworkParams->ucPasswordLength))) {
        return wifi_ret;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        // Check if WiFi is already connected
        if (wifi_conn_state == true) {
            esp_err_t ret = esp_wifi_disconnect();
            if (ret == ESP_OK)
            {
                // Wait for wifi disconnected event
                xEventGroupWaitBits(wifi_event_group, DISCONNECTED_BIT, pdTRUE, pdFALSE, portMAX_DELAY);
            }
        }

        /* Security is wildcard, only ssid/password is required */
        strlcpy((char *) &wifi_config.sta.ssid, pxNetworkParams->pcSSID, pxNetworkParams->ucSSIDLength);
        if (pxNetworkParams->xSecurity != eWiFiSecurityOpen) {
            strlcpy((char *) &wifi_config.sta.password, pxNetworkParams->pcPassword, pxNetworkParams->ucPasswordLength);
        }

        ret = esp_wifi_set_mode(WIFI_MODE_STA);
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to set wifi mode %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
            return wifi_ret;
        }

        ret = esp_wifi_set_config(ESP_IF_WIFI_STA, &wifi_config);
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to set wifi config %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
            return wifi_ret;
        }

        ret = esp_wifi_start();
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to start wifi %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
            return wifi_ret;
        }

        // Wait for wifi started event
        xEventGroupWaitBits(wifi_event_group, STARTED_BIT, pdFALSE, pdFALSE, portMAX_DELAY);

        esp_wifi_connect();

        // Wait for wifi connected or disconnected event
        xEventGroupWaitBits(wifi_event_group, CONNECTED_BIT | DISCONNECTED_BIT, pdTRUE, pdFALSE, portMAX_DELAY);
        if (wifi_conn_state == true) {
            wifi_ret = eWiFiSuccess;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );

    }

    return wifi_ret;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer,
                            uint8_t ucNumNetworks )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;

    if (pxBuffer == NULL || ucNumNetworks == 0) {
        return eWiFiFailure;
    }

    wifi_scan_config_t scanConf = {
        .ssid = NULL,
        .bssid = NULL,
        .channel = 0,
        .show_hidden = false
    };

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        if ( wifi_conn_state == false && wifi_ap_not_found == true )
        {
            /* It seems that WiFi needs explicit disassoc before scan request post
             * attempt to connect to invalid network name or SSID.
             */
            esp_wifi_disconnect();
            xEventGroupWaitBits(wifi_event_group, DISCONNECTED_BIT, pdTRUE, pdFALSE, 30);
        }

        esp_err_t ret = esp_wifi_scan_start(&scanConf, true);
        if (ret == ESP_OK)
        {
            wifi_ap_record_t *ap_info = calloc(1, sizeof(wifi_ap_record_t) * ucNumNetworks);
            if (ap_info != NULL)
            {
                uint16_t num_aps = ucNumNetworks;
                esp_wifi_scan_get_ap_records(&num_aps, ap_info);
                for (int i = 0; i < num_aps; i++) {
                    strlcpy(pxBuffer[i].cSSID, (const char *)ap_info[i].ssid, wificonfigMAX_SSID_LEN);
                    memcpy(pxBuffer[i].ucBSSID, ap_info[i].bssid, wificonfigMAX_BSSID_LEN);
                    pxBuffer[i].cRSSI = ap_info[i].rssi;
                    pxBuffer[i].cChannel = ap_info[i].primary;
                }
                free(ap_info);
                xRetVal = eWiFiSuccess;
            }
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_SetMode( WIFIDeviceMode_t xDeviceMode )
{
    esp_err_t ret;
    WIFIReturnCode_t xRetVal;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        switch (xDeviceMode) {
            case eWiFiModeStation:
                ret = esp_wifi_set_mode(WIFI_MODE_STA);
                xRetVal = (ret == ESP_OK) ? eWiFiSuccess : eWiFiFailure;
                break;
            case eWiFiModeAP:
                ret = esp_wifi_set_mode(WIFI_MODE_AP);
                xRetVal = (ret == ESP_OK) ? eWiFiSuccess : eWiFiFailure;
                break;
            default:
                xRetVal = eWiFiNotSupported;
                break;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }
    return xRetVal;
}

WIFIReturnCode_t WIFI_GetMode( WIFIDeviceMode_t * pxDeviceMode )
{
    esp_err_t ret;
    wifi_mode_t mode;
    WIFIReturnCode_t xRetVal = eWiFiFailure;

    if (pxDeviceMode == NULL)
    {
        return eWiFiFailure;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        ret = esp_wifi_get_mode(&mode);
        if (ret == ESP_OK)
        {
            if (mode == WIFI_MODE_STA)
            {
                *pxDeviceMode = eWiFiModeStation;
            } else if (mode == WIFI_MODE_AP)
            {
                *pxDeviceMode = eWiFiModeAP;
            }
            xRetVal = eWiFiSuccess;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }
    return xRetVal;
}

WIFIReturnCode_t WIFI_GetIP( uint8_t * pucIPAddr )
{
    WIFIReturnCode_t xRetVal;

    if (pucIPAddr == NULL) {
        return eWiFiFailure;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        *( ( uint32_t * ) pucIPAddr ) = FreeRTOS_GetIPAddress();
        xRetVal = eWiFiSuccess;
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    WIFIReturnCode_t xRetVal;

    if (pucMac == NULL) {
        return eWiFiFailure;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        esp_err_t ret = esp_wifi_get_mac(WIFI_MODE_STA, pucMac);
        xRetVal = (ret == ESP_OK) ? eWiFiSuccess : eWiFiFailure;
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_ConfigureAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    wifi_config_t wifi_config = { 0 };
    esp_err_t ret;
    WIFIReturnCode_t wifi_ret = eWiFiFailure;

    if (pxNetworkParams == NULL || pxNetworkParams->pcSSID == NULL
            || (pxNetworkParams->xSecurity != eWiFiSecurityOpen && pxNetworkParams->pcPassword == NULL)) {
        return wifi_ret;
    }

    if (!CHECK_VALID_SSID_LEN(pxNetworkParams->ucSSIDLength) ||
        (pxNetworkParams->xSecurity != eWiFiSecurityOpen && !CHECK_VALID_PASSPHRASE_LEN(pxNetworkParams->ucPasswordLength))) {
        return wifi_ret;
    }

    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        // Check if AP is already started
        if (wifi_ap_state == true) {
            esp_err_t ret = esp_wifi_stop();
            if (ret == ESP_OK)
            {
                // Wait for AP stopped event
                xEventGroupWaitBits(wifi_event_group, AP_STOPPED_BIT, pdTRUE, pdFALSE, portMAX_DELAY);
            }
        }

        /* ssid/password is required */
        strlcpy((char *) &wifi_config.ap.ssid, pxNetworkParams->pcSSID, pxNetworkParams->ucSSIDLength);
        if (pxNetworkParams->xSecurity != eWiFiSecurityOpen) {
            strlcpy((char *) &wifi_config.ap.password, pxNetworkParams->pcPassword, pxNetworkParams->ucPasswordLength);
        }

        ret = WIFI_SetSecurity(pxNetworkParams->xSecurity, &wifi_config.ap.authmode);
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Invalid security mode %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
            return wifi_ret;
        }

        ret = esp_wifi_set_mode(WIFI_MODE_AP);
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to set wifi mode %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
            return wifi_ret;
        }

        ret = esp_wifi_set_config(ESP_IF_WIFI_AP, &wifi_config);
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to set wifi config %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
            return wifi_ret;
        }

        wifi_ret = eWiFiSuccess;
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }

    return wifi_ret;
}
